recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: identifier expected but integer literal found.
    forward(100. 100.)
                 ^FourSquare:15: error: identifier expected but integer literal found.
  forward(100. 100.)
               ^