recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(){
    forward(100. 100.)
    left()
    forward(100. 100.)
    left()
    forward(100. 100.)
    left()
    forward(100. 100.)
    left()
  }
  square()
  left()
  left()
  forward(100. 100.)
  left()
  left()
  square()
  right()
  forward(100. 100.)
  left()
  square()
  forward(100. 100.)
  square()
  left()
  forward(100. 100.)
  right()
}